# python-project-52

./: .coverage  .gitignore  Makefile  README.md  app.po  build.sh  coverage.xml  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: my_check.yml  my_workflow.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.po
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filter.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_labels.py  0003_labeltask_alter_task_labels.py  0004_alter_task_labels.py  0005_alter_task_description_alter_task_labels.py  0006_merge_20240706_0237.py
task_manager/templates/: base.html  delete_form.html  form.html  index.html
task_manager/templates/labels/: index.html
task_manager/templates/statuses/: index.html
task_manager/templates/tasks/: index.html
task_manager/templates/users/: create.html  delete.html  index.html
task_manager/tests/: test.py  test_tasks.py  tests.py  user_test.py
task_manager/tests/fixtures/: users.json
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
