[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "programm that manage pages"
authors = ["Gajijka <galimovgadjimurad2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^22.0.0"
django = "^5.0.6"
django-bootstrap5 = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
