[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Gajijka <galimovgadjimurad2020@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
django-bootstrap5 = "^24.2"
django-filter = "^24.2"
djangorestframework = "^3.15.1"
rollbar = "^0.16.3"
coverage = "^7.5.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
